# RaveLightsHostDaemon

./: .gitignore  .gitmodules  Cargo.toml
HostWillOSFW/: CMakeLists.txt
HostWillOSFW/include/: enabled_modules.h  event_type_list.h  global_includes.h  matrix_thread.h  platform_cshal.h  project_conf.h  threads_list.h
HostWillOSFW/src/: main.cpp
LEDDriver/: platformio.ini
LEDDriver/include/: platform_cshal.h  project_defs.h  threads_list.h  usb_driver.h
LEDDriver/src/: main.cpp  usb_driver.cpp
RustHostDaemon/: Cargo.toml  build.rs
RustHostDaemon/src/: audio_input_processing.rs  main.rs  matrix.rs  udp_matrix.rs  usb_strip.rs
RustHostDaemon/src/audio_pipelines/: audio_input_processing.rs  mod.rs
RustHostDaemon/src/peripheral_control/: mod.rs  shared.rs  udp_matrix.rs  usb_strip.rs
src/: clock_control.rs  heart_control.rs  main.rs  matrix_control.rs  mod.rs  test.rs
src/cli/: cli_main.rs  mod.rs
src/cloud/: cloud_main.rs  mod.rs
src/device_manager/: main_device_manager.rs  mod.rs
src/matrix_control/: messagedata.rs
src/protobuf/: clock_program.proto  clock_program.rs  data_req.proto  data_req.rs  general_instructions.proto  general_instructions.rs  heaat_message.proto  heaat_message.rs  heart_program_control.proto  heart_program_control.rs  led_strip_data.proto  led_strip_data.rs  message_return_status.proto  message_return_status.rs  messagedata copy.proto  messagedata.proto  messagedata.rs  mod.rs  relay_msg.proto  relay_msg.rs  status.proto  temp_hum.proto  temp_hum.rs
src/serial_control/: mod.rs  strip_control.rs  teensy_control.rs
(+10 files in other folders)
