[package]
name = "RustHostDaemon"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pkg-config = "0.3"

[dependencies]
image = "0.25.1"
jpeg-decoder = "0.3.1"
gif = "0.13.1"
serde_json = "1.0"
serde = "1.0.171"
rustfft = "6.2.0"
lazy_static = "1.4"
cpal = "0.15.3"
hsv = "0.1.1"
serialport = "4.3.0"